[package]
name = "foo"
version = "0.1.0"
authors = ["Ryosuke YASUOKA <yasuoka0830@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.1"
rand = { git = "https://github.com/rust-lang-nursery/rand" }
# bar = { path = "../bar" }
